--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "description": "<h1 align=\"center\">   Taqtile API </h1>",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start:dev": "tsx watch src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^3.12.1",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.8.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.8.9",
+    "tsx": "^3.14.0",
+    "typescript": "^5.2.2"
   }
 }
