--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "dependencies": {
     "apollo-server": "^3.12.1",
     "express": "^4.18.2",
-    "express-graphql": "^0.12.0",
-    "graphql": "^16.8.1"
+    "express-graphql": "^0.12.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "^3.0.3",
     "tsx": "^3.14.0",
     "typescript": "^5.2.2"
   }
