--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
   "name": "taqtile-api",
-  "type": "module",
+  "type": "commonjs",
   "version": "1.0.0",
   "description": "<h1 align=\"center\">   Taqtile API </h1>",
   "main": "index.js",
   "scripts": {
-    "start:dev": "tsx watch src/server.ts"
+    "start:dev": "ts-node src/server.ts",
+    "start": "tsx watch src/server.ts",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.12.1",
-    "express": "^4.18.2",
-    "express-graphql": "^0.12.0"
+    "graphql": "^16.8.1",
+    "pg": "^8.4.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
-    "@types/node": "^20.8.9",
+    "@types/node": "^16.11.10",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.0.3",
+    "ts-node": "^10.7.0",
     "tsx": "^3.14.0",
-    "typescript": "^5.2.2"
+    "typescript": "5.1"
   }
 }
