--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,22 +16,5 @@
     "plugins": [
         "@typescript-eslint"
     ],
-    "rules": {
-        "indent": [
-            "error",
-            "tab"
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "never"
-        ]
-    }
+    "rules": {}
 }
