--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "graphql": "^16.8.1",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^16.11.10",
