--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@graphql-tools/load": "^8.0.0",
     "@graphql-tools/load-files": "^7.0.0",
     "@graphql-tools/merge": "^9.0.0",
+    "@types/bcryptjs": "^2.4.5",
     "apollo-server": "^3.12.1",
+    "bcryptjs": "^2.4.3",
     "graphql": "^16.8.1",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
