--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     ],
     "target": "ES2020",
     "module": "commonjs",
+    "moduleResolution": "node",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
