--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "assert": "^2.1.0",
+    "axios": "^1.6.0",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "mocha": "^10.2.0",
