--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.9",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/mocha": "^10.0.3",
     "@types/node": "^16.11.10",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
