--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@types/bcryptjs": "^2.4.5",
     "apollo-server": "^3.12.1",
     "bcryptjs": "^2.4.3",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
-    "graphql": "^16.8.1",
+    "graphql": "^15.3.0",
+    "graphql-scalars": "^1.22.4",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1",
     "typeorm": "^0.3.17",
     "zod": "^3.22.4"
   },
