--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
+    "typedi": "^0.10.0",
     "typeorm": "^0.3.17",
     "zod": "^3.22.4"
   },
